need to track mosquitoID in mosquitoPfMOI object

--- a/MASH-CPP/inst/PATHOGEN-PfMOI.yml
+++ b/MASH-CPP/inst/PATHOGEN-PfMOI.yml
@@ -142,6 +142,10 @@ mosquitoPfMOI:
       @md
       @export
 
+    # constructor arguments
+    args:
+      - MosquitoID_init: "std::string"
+
   methods:
 
     # getters & setters
